Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/enum/DA2.out
DA2.java:13:17: compiler.err.illegal.enum.static.ref
1 error
